--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+CSV = "0.10"
 Chain = "0.5"
 DataFrameMacros = "0.4"
 DataFrames = "1"
