--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "YggRepology"
+name = "YggdrasilStats"
 uuid = "63713dd9-2491-4626-852b-dd5331b9c228"
 authors = ["Jeremiah Lewis <hello@jeremiahlewis.me>"]
 version = "0.0.1"
