--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -52,4 +52,5 @@
               GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               VALIDATE_JSCPD: false
               VALIDATE_DOCKERFILE_HADOLINT: false
+              VALIDATE_YAML: false
     
